--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,11 @@ node_modules/
 .pnp.js
 
 # Environment files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# .env
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
 
 # Test coverage reports
 coverage/
